--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
     <title>Timed</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="{{rootURL}}assets/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{{rootURL}}assets/favicon-16x16.png" sizes="16x16" />
+    <link rel="shortcut icon" href="{{rootURL}}assets/favicon.ico" type="image/x-icon" />
 
     {{content-for "head"}}
 
