Remove initial loading spinner since it looks bad with the new layout

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 
     {{content-for "head-footer"}}
   </head>
-  <body class="loading-mask">
+  <body>
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
